error handling changes
