# controllers/users.js
@@ -7,16 +7,24 @@ const getSingle = async (request, response) => {
   // #swagger.summary=Show users info based off id
   // #swagger.description=Show users email and hashed password based off id
   try {
-    const userId = new ObjectId(request.params.id);
-    const result = await mongodb
-      .getDb()
-      .db('ClubOrganization')
-      .collection('users')
-      .find({ _id: userId });
-    result.toArray().then((lists) => {
-      response.setHeader('Content-Type', 'application/json');
-      response.status(200).json(lists[0]);
-    });
+    if (ObjectId.isValid(request.params.id)) {
+      const userId = new ObjectId(request.params.id);
+      const result = await mongodb
+        .getDb()
+        .db('ClubOrganization')
+        .collection('users')
+        .find({ _id: userId })
+        .toArray();
+      // Error handling
+      if (result.length > 0) {
+        response.setHeader('Content-Type', 'application/json');
+        response.status(200).json(result[0]);
+      } else {
+        response.status(400).json(result.error || 'Could not display user information.');
+      }
+    } else {
+      response.status(400).json('Must use a valid user id to see the information.');
+    }
   } catch (err) {
     response.status(500).json(err);
   }
@@ -38,7 +46,7 @@ const createUsers = async (request, response) => {
           .getDb()
           .db('ClubOrganization')
           .collection('users')
-          .insertOne({ username, password: hashedPassword });
+          .insertOne({ username: username, password: hashedPassword });
         // Error handling
         if (hashedPassword) {
           response.status(201).json('User was created.');
@@ -55,36 +63,58 @@ const updateUser = async (req, res) => {
   // #swagger.tags=['Users']
   // #swagger.summary=Update a users info based off id
   // #swagger.description=Update a users email and hashed password based off id
-  const username = request.params.username;
-  const users = {
-    username: request.body.username,
-    password: request.body.password,
-  };
-  const response = await mongodb
-    .getDb()
-    .db('ClubOrganization')
-    .collection('users')
-    .replaceOne({ username: username }, users);
-  console.log(response);
-  if (response.modifiedCount > 0) {
-    res.status(204).send();
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while updating the user.');
+  try {
+    if (ObjectId.isValid(req.params.id)) {
+      const username = new ObjectId(req.params.id);
+      const newUsername = req.body.username;
+      const password = req.body.password;
+
+      // Hash password
+      const plainPassword = password;
+      bcrypt.hash(plainPassword, 10)
+        .then(function (hashedPassword) {
+          const response = mongodb
+            .getDb()
+            .db('ClubOrganization')
+            .collection('users')
+            .replaceOne({ _id: username }, { username: newUsername, password: hashedPassword });
+          console.log(response);
+          if (hashedPassword) {
+            res.status(204).send('Document was updated');
+          } else {
+            res.status(500).json(response.error || 'Some error occurred while updating the user.');
+          }
+        });
+    } else {
+      res.status(400).json('Must use a valid user id to update user information.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
   }
 };
-  
 
 const deleteUser = async (req, res) => {
   // #swagger.tags=['Users']
   // #swagger.summary=Delete a user
   // #swagger.description=Delete a users email and hashed password
-  const username = request.params.username;
-  const response = await mongodb.getDb().db('ClubOrganization').collection('members').deleteOne({ username: username }, true);
-  console.log(response);
-  if (response.deletedCount > 0) {
-    res.status(204).send();
-  } else {
-    res.status(500).json(response.error || 'Error occurred while deleting the user.');
+  try {
+    if (ObjectId.isValid(req.params.id)) {
+      const username = new ObjectId(req.params.id);
+      const response = await mongodb
+        .getDb().db('ClubOrganization')
+        .collection('members')
+        .deleteOne({ _id: username }, true);
+      console.log(response.deletedCount + 'document(s) were deleted');
+      if (response.deletedCount > 0) {
+        res.status(200).send(response.deletedCount + 'document(s) were deleted');
+      } else {
+        res.status(500).json(response.error || 'Error occurred while deleting the user.');
+      }
+    } else {
+      res.status(400).json('Must provide a valid user id to delete user.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
   }
 };
 
