# controllers/volunteers.js
@@ -10,11 +10,15 @@ const getAll = async (request, response) => {
       .getDb()
       .db('ClubOrganization')
       .collection('volunteers')
-      .find();
-    result.toArray().then((lists) => {
+      .find()
+      .toArray();
+    // Error handling
+    if (result.length > 0) {
       response.setHeader('Content-Type', 'application/json');
-      response.status(200).json(lists);
-    });
+      response.status(200).json(result);
+    } else {
+      response.status(400).json(result.error || 'Could not get list of volunteers.');
+    }
   } catch (err) {
     response.status(500).json(err);
   }
@@ -25,16 +29,24 @@ const getSingle = async (request, response) => {
   // #swagger.summary=Shows volunteer info based off id
   // #swagger.description=See volunteer info for each event based off id
   try {
-    const userId = new ObjectId(request.params.id);
-    const result = await mongodb
-      .getDb()
-      .db('ClubOrganization')
-      .collection('volunteers')
-      .find({ _id: userId });
-    result.toArray().then((lists) => {
-      response.setHeader('Content-Type', 'application/json');
-      response.status(200).json(lists[0]);
-    });
+    if (ObjectId.isValid(request.params.id)) {
+      const userId = new ObjectId(request.params.id);
+      const result = await mongodb
+        .getDb()
+        .db('ClubOrganization')
+        .collection('volunteers')
+        .find({ _id: userId })
+        .toArray();
+      // Error handling
+      if (result.length > 0) {
+        response.setHeader('Content-Type', 'application/json');
+        response.status(200).json(result[0]);
+      } else {
+        response.status(400).json(result.error || 'Could not get volunteers information.');
+      }
+    } else {
+      response.status(400).json('Must provide a valid volunteer id to access volunteer list.');
+    }
   } catch (err) {
     response.status(500).json(err);
   }
@@ -58,9 +70,7 @@ const createVolunteer = async (request, response) => {
     if (res.acknowledged) {
       response.status(201).json(res);
     } else {
-      response
-        .status(500)
-        .json(res.error || 'Error occurred while creating your volunteer.');
+      response.status(500).json(res.error || 'Error occurred while creating your volunteer.');
     }
   } catch (err) {
     response.status(500).json(err);
@@ -69,24 +79,32 @@ const createVolunteer = async (request, response) => {
 
 const updateVolunteer = async (req, res) => {
   // #swagger.tags=['Volunteers']
-  // #swagger.summary=Update volunteer info
-  // #swagger.description=Update volunteer info
-  const name = request.params.name;
-  const volunteers = {
-    event: request.body.event,
-    opportunity: request.body.opportunity,
-    name: request.body.name,
-  };
-  const response = await mongodb
-    .getDb()
-    .db('ClubOrganization')
-    .collection('users')
-    .replaceOne({ name: name }, volunteers);
-  console.log(response);
-  if (response.modifiedCount > 0) {
-    res.status(204).send();
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while updating the volunteer.');
+  // #swagger.summary=Update volunteer info based off id
+  // #swagger.description=Update volunteer info based off id
+  try {
+    if (ObjectId.isValid(req.params.id)) {
+      const name = new ObjectId(req.params.id);
+      const volunteers = {
+        event: req.body.event,
+        opportunity: req.body.opportunity,
+        name: req.body.name,
+      };
+      const response = await mongodb
+        .getDb()
+        .db('ClubOrganization')
+        .collection('users')
+        .replaceOne({ _id: name }, volunteers);
+      console.log(response.modifiedCount + 'document(s) were updated');
+      if (response.modifiedCount > 0) {
+        res.status(204).send(response.modifiedCount + 'document(s) were updated');
+      } else {
+        res.status(500).json(response.error || 'Some error occurred while updating the volunteer.');
+      }
+    } else {
+      res.status(400).json('Must provide a valid volunteer id to update volunteer info.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
   }
 };
 
@@ -96,13 +114,27 @@ const deleteVolunteer = async (req, res) => {
   // #swagger.tags=['Volunteers']
   // #swagger.summary=Delete volunteer info
   // #swagger.description=Delete volunteer info
-  const name = request.params.name;
-  const response = await mongodb.getDb().db('ClubOrganization').collection('members').deleteOne({ name: name }, true);
-  console.log(response);
-  if (response.deletedCount > 0) {
-    res.status(204).send();
-  } else {
-    res.status(500).json(response.error || 'Error occurred while deleting the user.');
+  try {
+    if (ObjectId.isValid(req.params.id)) {
+      const volunteer = new ObjectId(req.params.id);
+      //Connect to books database in mongodb
+      const response = await mongodb
+        .getDb()
+        .db('ClubOrganization')
+        .collection('volunteers')
+        .deleteOne({ _id: volunteer}, true);
+      console.log(response.deletedCount + 'document(s) were deleted.');
+      //Error handling (successful post or error)
+      if(response.acknowledged) {
+        res.status(200).send(response.deletedCount + 'documents(s) were deleted.');
+      } else {
+        res.status(500).json(response.error || 'Sorry. Book information was not deleted.');
+      }
+    } else {
+      res.status(400).json('Must provide a valid id to delete book.');
+    }
+  } catch (err) {
+    res.status(500).json(err);
   }
 };
 
