# routes/events.js
@@ -5,7 +5,7 @@ const eventsController = require('../controllers/events');
 routes.get('/', eventsController.getAll);
 routes.get('/:id', eventsController.getSingle);
 routes.post('/', eventsController.createEvent);
-routes.put('/:eventName', eventsController.updateEvent);
-routes.delete('/:eventName', eventsController.deleteEvent);
+routes.put('/:id', eventsController.updateEvent);
+routes.delete('/:id', eventsController.deleteEvent);
 
 module.exports = routes;
