# routes/members.js
@@ -2,7 +2,6 @@ const routes = require('express').Router();
 
 const membersController = require('../controllers/members');
 
-routes.get('/:id', membersController.getSingle);
 routes.get('/', membersController.getAll);
 routes.get('/:memberId', membersController.getSingle);
 routes.post('/', membersController.createMembers);
