# routes/volunteers.js
@@ -5,7 +5,7 @@ const volunteersController = require('../controllers/volunteers');
 routes.get('/', volunteersController.getAll);
 routes.get('/:id', volunteersController.getSingle);
 routes.post('/', volunteersController.createVolunteer);
-routes.put('/:username', volunteersController.updateVolunteer);
-routes.delete('/:username', volunteersController.deleteVolunteer);
+routes.put('/:id', volunteersController.updateVolunteer);
+routes.delete('/:id', volunteersController.deleteVolunteer);
 
 module.exports = routes;
